--- a/website/photobook/index.html
+++ b/website/photobook/index.html
@@ -228,6 +228,16 @@ hiii this is a caption
 		<!-- 4th column -->
 		<div class="column">
 
+			<div class="pic digi"><img src="!g/240419-misty.jpeg">
+				<div class="hov">
+					<div class="caption">
+						there's this cat called misty that visits me every once in a while. she's very cute! i got her name from her collar. it has a little bell which is perfect because it let's me know when she's by and i always open the door so i can give her some pets. good cat.
+						<br>
+						<b>taken on 19.apr.24</b>
+					</div>
+				</div>
+			</div>
+
 			<div class="pic film"><img src="!g/221018-isabela-2.jpg">
 				<div class="hov">
 					<div class="caption">
@@ -284,7 +294,7 @@ hiii this is a caption
 	<div id="home"><a title="go back to homepage" href="/home"><img src="/!g/pix/polaroid_5.gif"></a></div>
 
 	<footer>
-		please <u>don't</u> use my pics without my permission! <img src="/!g/pix/cam-shoot.gif"> <b>last updated: 03.apr.24</b>
+		please <u>don't</u> use my pics without my permission! <img src="/!g/pix/cam-shoot.gif"> <b>last updated: 19.apr.24</b>
 		<br>
 		<b>credit:</b> bg by <a href="http://sozaioukoku.fc2web.com/index.html" target="_blank">sozaioukoku</a> / header font by <a href="https://www.dafont.com/growing-garden-script.font" target="_blank">helotype</a>
 		<br>
