--- a/website/about/index.html
+++ b/website/about/index.html
@@ -113,6 +113,7 @@
 				<li>stray</li>
 				<li>hyper light drifter</li>
 				<li>if found...</li>
+				<li>fallout 4</li>
 
 				<h3>animanga</h3>
 				<li>kaiba (2008)</li>
@@ -190,6 +191,7 @@
 		<div class="header"><img src="!g/folder.png" class="folder"> fav_characters<img src="!g/close.jpg" class="himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
 		<div class="borderwrap">
 			<div class="wrapper-in">
+			<img title="dogmeat from the fallout franchise" src="!g/fav-charas/dogmeat.png" alt="dogmeat">
 				<img title="power and meowy :3 from chainsaw man" src="!g/fav-charas/power.jpg" alt="power from chainsaw man">
 				<img title="angel devil from chainsaw man" src="!g/fav-charas/angel.jpg" alt="angel devil from chainsaw man">
 				<img title="altie from hyper light drifter" src="!g/fav-charas/altie.jpg">
