--- a/website/notebook/links/index.html
+++ b/website/notebook/links/index.html
@@ -101,6 +101,7 @@
 
 		<h4 id="js">javascript</h4>
 		<li><a href="https://javascript.info/" target="_blank">javascript.info</a></li>
+		<li><a href="https://aparrish.neocities.org/simple-interactivity" target="_blank">simple interactivity with jQuery</a></li>
 		<li><a href="http://www.javascriptkit.com/cutpastejava.shtml" target="_blank">javascriptkit</a></li>
 		<li><a href="https://github.com/atifjamal360/Books/blob/master/A-Smarter-Way-to-Learn-JavaScript-The-new-approach-that-uses-technology-to-cut-your-effort-in-half.pdf" target="_blank">a smarter way to learn JS (PDF book)</a></li>
 		<li><a href="https://www.freecodecamp.org" target="_blank">freecodecamp</a> - courses and projects for you to learn responsive web design, basic javascript, and much more!</li>
@@ -241,6 +242,7 @@
 		<li><a href="https://favicons.neocities.org" target="_blank">favicons</a> - archive of pixels!</li>
 		<li><a href="https://rentry.co/candyfizz" target="_blank">candyfizz</a> - rainbow-y graphics</li>
 		<li><a href="https://melonking.net/melon?z=/frames/textures" target="_blank">melon's TextureTown</a></li>
+		<li><a href="https://sadthemes.tumblr.com/smolpxl" target="_blank">sadthemes' pixel collection</a> - sorted by colors!</li>
 
 		<center><img src="/!g/div/scissors.gif"></center>
 
