--- a/website/home.html
+++ b/website/home.html
@@ -194,6 +194,15 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="webrings" class="box">
 			<h2>webrings &amp; widgets</h2>
+			<!--		catfolk-->
+			<script src="https://snewberry.neocities.org/catfolk/webstring.js"></script>
+
+			<!--		bisexualism-->
+			<div id="bisexualism">
+				<script type="text/javascript" src="https://emeowly.github.io/bi/onionring-variables.js" defer></script>
+				<script type="text/javascript" src="https://emeowly.github.io/bi/onionring-img-widget.js" defer></script>
+			</div>
+
 			<!--				silly.city-->
 			<iframe src="https://silly.city/embed.html?user=doqmeat" title="silly.city webring" frameborder="no" width="100%" height="60px">
 			</iframe>
