--- a/website/sites/index.html
+++ b/website/sites/index.html
@@ -186,6 +186,8 @@
 			<a title="caitsith" href="https://caitsith.neocities.org" target="_blank"><img src="!g/caitsith.gif" alt="caitsith"></a>
 			<a title="ribo.zone" href="https://ribo.zone/" target="_blank"><img src="!g/ribose.gif" alt="ribo.zone"></a>
 			<a title="kaftofi" href="https://sea-of-colors.neocities.org/" target="_blank"><img src="!g/sea-of-colors.gif" alt="sea of colors"></a>
+			<a title="poemdoll" href="https://poemdoll.neocities.org"><img src="!g/poemdoll.png" alt="poemdoll"></a>
+			<a href="https://snewberry.neocities.org"><img style="image-rendering: pixelated" src="https://snewberry.neocities.org/snewbutton.gif" alt="Snewberry Button"></a>
 
 		</div>
 
@@ -200,7 +202,8 @@
 			<a title="one of the coolest websites i've seen in a while!!! i love how interactive it is" href="https://2cherrish.neocities.org/">2cherrish</a> /
 			<a href="https://yaebee.neocities.org/" target="_blank">yaebee</a> /
 			<a href="https://glassheart.neocities.org" target="_blank">glassheart</a> /
-			<a href="https://cyclopamine.neocities.org/" target="_blank">cyclopamine</a>
+			<a href="https://cyclopamine.neocities.org/" target="_blank">cyclopamine</a> /
+			<a href="https://maphren.neocities.org/" target="_blank">maphren</a>
 		</p>
 
 		<h3><img src="/!g/pix/icon_k_clover1.gif"> other cool sites</h3>
