new journal log

--- a/website/home.html
+++ b/website/home.html
@@ -132,6 +132,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
+			<li>10.apr.24 - journal log: <a href="/journal">my dilemma with neocities profile</a></li>
 			<li>14.apr.24 - added more games to <a href="/vgs">gaming log</a>!</li>
 			<li>12.apr.24 - added some new pages to <a title="fallout, fallout new vegas, cloud gardens" href="/vgs">gaming log</a>!</li>
 			<li>11.apr.24 - my site is 1 year old today ^_^ i wrote about it on my <a href="/journal">journal</a></li>
