--- a/website/sites/index.html
+++ b/website/sites/index.html
@@ -72,7 +72,6 @@
 			<a title="mufo - small little site with a nice blog" href="https://mufo.neocities.org" target="_blank"><img src="!g/mufo.gif"></a>
 			<a title="00s - love the blog as well" href="https://00s.neocities.org" target="_blank"><img src="!g/00s.png"></a>
 			<a title="meowcatsrule - cats rule indeed!!! cool photo journal" href="https://meowcatsrule.neocities.org" target="_blank"><img src="!g/meowcatsrule.gif"></a>
-			<a title="lopster - crazy website with lots of clutter!" href="https://lopster.neocities.org" target="_blank"><img src="!g/lopster.png"></a>
 			<a title="jj - very lovely! i love reading about their projects! so charming" href="https://cygnet.neocities.org" target="_blank"><img src="!g/cygnet.png"></a>
 			<a href="https://strawberry-gashes.neocities.org" title="erin - cute pastel site, has a ton of cute resources, and another inspiration for my site!" target="_blank"><img src="!g/strawberry-gashes.gif"></a>
 			<a title="bunny - another super cute site!!!" href="https://pastelbunnybab.neocities.org/" target="_blank"><img src="!g/pastelbunnybab.gif"></a>
@@ -107,7 +106,6 @@
 			<a title="grim / oscar - I LOVE THIS SITE!!!! it inspires me a ton i think it's so fun and i love the webmaster's art style as welll" href="https://bisuko.neocities.org/" target="_blank"><img src="!g/bisuko.png"></a>
 			<a title="kerberos" href="https://myths-garden.neocities.org/" target="_blank"><img src="!g/myths-garden.png"></a>
 			<a title="cc - clean and nice site!" href="https://debtdeath.neocities.org/" target="_blank"><img src="!g/debtdeath.png"></a>
-			<a title="benny - colorful and fun site, very cool!" href="https://sugarforbrains.neocities.org/" target="_blank"><img src="!g/sugarforbrains.gif"></a>
 			<a title="rita" href="https://sunnyday.neocities.org/" target="_blank"><img src="!g/sunnyday.png"></a>
 			<a title="shiraru" href="https://shiraru.neocities.org/" target="_blank"><img src="!g/shiraru.PNG"></a>
 			<a title="lana - a personal site that is in portuguese but that won't stop me from enjoying it!! i can somewhat read it a lil bit but either way i just love how this site looks! and the stuff they write (despite me using a translator) is very interesting!" href="https://porce-lana.blogspot.com/" target="_blank"><img src="!g/porcelana.png"></a>
@@ -180,7 +178,7 @@
 			<a title="ita.toys - such a FUN site. this is what having graphic design as your passion truly looks like" href="https://ita.toys" target="_blank"><img src="!g/ita.toys.gif" alt="ita.toys"></a>
 			<a title="fruitgummie" href="https://fruitgummie.neocities.org/" target="_blank"><img src="!g/fruitgummie.gif" alt="fruitgummie"></a>
 			<a title="shydeer" href="https://shydeer.neocities.org" target="_blank"><img src="!g/shydeer.png" alt="shydeer"></a>
-			<a title="pameluft" href="https://pameluft.neocities.org" target="_blank"><img src="!g/pameluft.gif" alt="pameluft"></a>
+			<a title="pameluft - just a just log of sorts. love the concept behind this site!" href="https://pameluft.neocities.org" target="_blank"><img src="!g/pameluft.gif" alt="pameluft"></a>
 			<a target="_blank" href="https://kwaamfan.neocities.org/"><img src="https://files.catbox.moe/egpfu7.gif"></a>
 			<a title="popisbubble" href="https://popisbubbles.neocities.org"><img src="!g/popisbubbles.gif" alt="popisbubbles"></a>
 			<a title="caitsith" href="https://caitsith.neocities.org" target="_blank"><img src="!g/caitsith.gif" alt="caitsith"></a>
@@ -188,6 +186,7 @@
 			<a title="kaftofi" href="https://sea-of-colors.neocities.org/" target="_blank"><img src="!g/sea-of-colors.gif" alt="sea of colors"></a>
 			<a title="poemdoll" href="https://poemdoll.neocities.org"><img src="!g/poemdoll.png" alt="poemdoll"></a>
 			<a href="https://snewberry.neocities.org"><img style="image-rendering: pixelated" src="https://snewberry.neocities.org/snewbutton.gif" alt="Snewberry Button"></a>
+			<a title="lexi" href="https://lexiqqq.com/" target="_blank"><img src="https://www.lexiqqq.com/assets/img/button_4.gif" alt="lexi"></a>
 
 		</div>
 
@@ -263,12 +262,12 @@
 			<a title="such a cute site with lots of personality" href="https://eggsandmint.neocities.org" target="_blank"><img src="!g/eggsandmint.png" alt="eggsandmint"></a>
 			<a href="https://shrimpfriedeggs.neocities.org/"><img src="https://shrimpfriedeggs.neocities.org/art/mybutton.gif"></a>
 			<a title="velvet blue" href="https://humanityisnotbeautiful.neocities.org"><img src="https://files.catbox.moe/vltthb.png" alt="Velvet Blue"></a>
-			<a title="lexi" href="https://lexiqqq.com/" target="_blank"><img src="https://www.lexiqqq.com/assets/img/button_4.gif" alt="lexi"></a>
 			<a title="nyabla" href="https://nyabla.net" target="_blank"><img src="!g/nyabla.png" alt="nyabla"></a>
 			<a href="https://decodreams.neocities.org" target="_blank"><img src="!g/decodreams.gif" alt="decodreams"></a>
 			<a href="https://ajiyuu.neocities.org" target="_blank"><img src="!g/ajiyuu.jpeg" alt="ajiyuu"></a>
 			<a href="https://hat.neocities.org" target="_blank"><img src="!g/hat.gif" alt="hat"></a>
 			<a href="https://zucchini.cc" target="_blank"><img src="!g/zucchini.gif" alt="zucchini.cc"></a>
+			<a href="https://nerucom.neocities.org" target="_blank"><img src="!g/nerucom.gif" alt="nerucom"></a>
 		</div>
 
 		<a href="https://mewmiu.blog.fc2.com" target="_blank"><img src="https://blog-imgs-169.fc2.com/m/e/w/mewmiu/stamp.png"></a>
