added info page

--- a/website/notebook/index.html
+++ b/website/notebook/index.html
@@ -93,6 +93,7 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 			<div id="site-p" class="paper left">
 				<div class="left-in">
 					<p>this is the site related things tab</p>
+					<li><a href="sitely/info.html" target="iframe_b">site + tools info</a></li>
 					<li><a href="/sitemap.html" target="iframe_b">sitemap</a></li>
 					<li><a href="https://github.com/doqmeat/doqmeat.neocities.org/issues" class="outlink" target="_blank">to-do's</a> - <small>i've moved this to github issues since it's easier for me to keep track of and update!</small></li>
 					<li><a title="img heavy, might have to reload frame" href="sitely/graphics.html" target="iframe_b">graphics collection</a></li>
