removed neocities profile link

--- a/website/home.html
+++ b/website/home.html
@@ -80,9 +80,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<a href="/sitemap"><img src="/!g/pix/world.gif"> sitemap</a>
 
 			<h3>offsite</h3>
-			<a href="https://neocities.org/site/doqmeat" target="_blank" class="outlink"><img src="/!g/pix/catheadswing.gif"> neocities
-				profile</a>
-			<a href="https://github.com/doqmeat/doqmeat.com" target="_blank" class="outlink"><img src="/!g/pix/puter.gif"> github repository</a>
+			<a title="github repository" href="https://github.com/doqmeat/doqmeat.com" target="_blank" class="outlink"><img src="/!g/pix/puter.gif"> source code</a>
 			<a title="doqmeat@gmail.com" href="mailto:doqmeat@gmail.com" target="_blank" class="outlink"><img src="/!g/pix/mail-sozaiya.gif" alt=""> e-mail</a>
 		</nav>
 
@@ -354,7 +352,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 		<p><a href="/notebook/links/credit.html#home">credit for materials used!</a> / homepage runing on v3!</p>
 		<p>website coded with lots of love by des <img src="/!g/pix/catheart1.gif" alt="">
 			on the web since <b>april 11, 2023</b> <img src="/!g/pix/catroll.gif" alt="">
-			hosted on <a class="outlink" href="https://neocities.org/site/doqmeat" target="_blank">neocities</a></p>
+			hosted on <a class="outlink" href="https://neocities.org/" target="_blank">neocities</a></p>
 		<p> <img src="/sites/!g/doqmeat.png">
 			<a href="https://decolonizepalestine.com/" style="background:transparent"><img src="/collection/internet-graphics/!g/palestine.gif" alt="free palestine button"></a>
 			<img src="/collection/internet-graphics/!g/best%20viewed.jpg">
