--- a/website/home.html
+++ b/website/home.html
@@ -105,8 +105,12 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="status" class="box;">
 			<div class="padding">
+
 				<h2>status</h2>
+				<b>announcement:</b> <a title="click to read more" href="/journal/2024/04.html#20">i have disabled my neocities profile!</a>
+				<br>
 				<span class="imood">i am feeling...</span> <a href="https://www.imood.com/users/doqmeat"><img src="https://moods.imood.com/display/uname-doqmeat/trans-1/imood.gif" alt="The current mood of doqmeat at www.imood.com" border="0"></a>
+
 				<div id="statuscafe">
 					<div id="statuscafe-username"></div>
 					<div id="statuscafe-content"></div>
@@ -130,7 +134,8 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
-			<li>10.apr.24 - journal log: <a href="/journal">my dilemma with neocities profile</a></li>
+			<li>21.apr.24: new notebook page: <a href="/notebook/sitely/info.html">site + tools info</a></li>
+			<li>20.apr.24 - journal log: <a href="/journal/2024/04.html#20">my dilemma with neocities profile</a></li>
 			<li>14.apr.24 - added more games to <a href="/vgs">gaming log</a>!</li>
 			<li>12.apr.24 - added some new pages to <a title="fallout, fallout new vegas, cloud gardens" href="/vgs">gaming log</a>!</li>
 			<li>11.apr.24 - my site is 1 year old today ^_^ i wrote about it on my <a href="/journal">journal</a></li>
