--- a/website/music/info.html
+++ b/website/music/info.html
@@ -23,17 +23,18 @@
 	<div id="frame">
 		<h2>info</h2>
 
-		<p>one of my most precious memories is making lists of songs i wanted my dad to download on my mp3 player when i was little. throughout my entire life, i have always been accompanied by music, it is something deeply important to me.</p>
-		
+		<p>one of my most precious memories is making lists of songs i wanted my dad to download on my mp3 player when i was little. throughout my entire life, i have always been accompanied by music, it is something deeply important to me! ♪(´▽｀)</p>
+
 		<p>i just wanna have a space where i can talk a lil bit about the stuff i like while also showcasing it as well.</p>
 
-		<p>feel free to send me a recommendation through <a title="doqmeat@gmail.com" href="mailto:doqmeat@gmail.com" target="_blank">e-mail</a>!!! i will gladly listen to it whenever i have some time. i love discovering new music <img src="/!g/pix/catroll.gif"></p>
+		<p>feel free to send me a recommendation through <a title="doqmeat@gmail.com" href="mailto:doqmeat@gmail.com" target="_blank">e-mail</a> !!! i will gladly listen to it whenever i have some time. i love discovering new music <img src="/!g/pix/catroll.gif"></p>
 
 		<center><img src="/!g/deco/jermamusic.gif"></center>
 
 		<h3>other</h3>
 
-		<p>i run the <a href="https://twitter.com/hourlysiinamota" target="_blank">siinamota song bot</a> on twitter! if you're into vocaloid, i recommend checking out siinamota's stuff! i have a <a href="https://sepiarecord.notion.site/sepiarecord/homepage-6242b9a7ce844610bdf2a9187a0a1bfb" target="_blank">siinamota guide</a> on notion <img src="/!g/pix/emote1bubbles.gif"> where you can learn more about him and his music! (while i get his shrine ready...)</p>
+		<p>i run the <a href="https://twitter.com/hourlysiinamota" target="_blank">siinamota song bot</a> on twitter! i made a site with more info about the bot <a href="https://siinamota.doqmeat.com/bot" target="_blank">here</a>! if you're into vocaloid, i recommend checking out siinamota's stuff! i have a <a href="https://sepiarecord.notion.site/sepiarecord/homepage-6242b9a7ce844610bdf2a9187a0a1bfb" target="_blank">siinamota guide</a> on notion <img src="/!g/pix/emote1bubbles.gif"> where you can learn more about him and his music! (while i get his shrine ready...)</p>
+
 
 		<h3>important dates</h3>
 
