--- a/website/index.html
+++ b/website/index.html
@@ -93,10 +93,10 @@
 	<div id="bottom"></div>
 
 	<main>
-		<p>hello there! you're about to enter <br> <span id="rainbow">doqmeat.com</span></p>
+		<p>hello there! you're about to enter <br> <a style="background:transparent;text-decoration: none;" href="/home"><span id="rainbow">doqmeat.com</span></a></p>
+		<p>this is a personal website made for my own enjoyment.</p>
 		<p>some pages can be <b>very</b> IMG heavy and might require you to reload more than once for everything to load.</p>
-		<p class="hide"><b>homepage is compatible with mobile devices but i cannot guarantee that for every page on my site, sorry!</b></p>
-		<p>this is a personal website made for my own enjoyment. with that said, have fun browsing!</p>
+		<p class="hide"><b>homepage is compatible with mobile devices but i cannot guarantee that for every page on my site.</b></p>
 	</main>
 
 	<div id="chatbox">
@@ -104,77 +104,12 @@
 		<iframe src="https://www3.cbox.ws/box/?boxid=3527348&boxtag=lFAd4a" width="100%" height="100%" allowtransparency="yes" allow="autoplay" frameborder="0" marginheight="0" marginwidth="0" scrolling="auto"></iframe>
 	</div>
 
-	<div id="webrings">
-		<h3>webrings</h3>
-		<!--		catfolk-->
-		<script src="https://snewberry.neocities.org/catfolk/webstring.js"></script>
-		<!--		bisexualism-->
-		<div id="bisexualism">
-			<script type="text/javascript" src="https://emeowly.github.io/bi/onionring-variables.js" defer></script>
-			<script type="text/javascript" src="https://emeowly.github.io/bi/onionring-img-widget.js" defer></script>
-		</div>
-
-		<!--		eggring -->
-		<div style="border:2px solid #ffce10; width:80%;background:white;margin:auto;margin-bottom:10px;margin-top:10px;border-radius:10px;font-size: 13px;" id="eggring">
-			<p style="margin: 0px;">Eggring</p>
-			<a href="https://eggring.neocities.org" target="_parent"><img src="!g/web/fanlisting-cliques/egg.gif" alt="eggring"></a>
-			<p style="margin:5px;">
-				<a id="eggringPrev" target="_blank" rel="noopener noreferrer">←</a> 🍳
-				<a id="eggringRand" target="_blank" rel="noopener noreferrer">random</a> 🍳
-				<a id="eggringNext" target="_blank" rel="noopener noreferrer">→</a>
-			</p>
-		</div>
-
-		<!--		silly.city-->
-		<iframe src="https://silly.city/embed.html?user=doqmeat" title="silly.city webring" frameborder="no" width="100%" height="60px">
-		</iframe>
-
-		<!--			journalring -->
-		<journal-ring icon="lavender"></journal-ring>
-		<script async src="https://cdn.jsdelivr.net/gh/js044/nenrikido@main/static/js/misc/journalring.js"></script>
-
-		<!-- neo creatives -->
-		<div id='ncring' style="margin:auto;">
-			<script type="text/javascript" src="https://neocreatives.neocities.org/onionring-variables.js"></script>
-			<script type="text/javascript" src="https://neocreatives.neocities.org/onionring-widget.js"></script>
-		</div>
-
-		<!-- mob psycho 100 / mp100 webring -->
-		<center>
-			<div id='mobring' style="width:200px;">
-				<script type="text/javascript" src="https://sugarforbrains.neocities.org/mobring/onionring-variables.js"></script>
-				<script type="text/javascript" src="https://sugarforbrains.neocities.org/mobring/basic-widget.js"></script>
-			</div>
-		</center>
-
-		<!-- pikring -->
-		<div id='PikRing' style="margin:5px 0px;">
-			<link rel="stylesheet" href="https://nickolox.neocities.org/pikring/css/rock.css">
-			<script type="text/javascript" src="https://nickolox.neocities.org/pikring/pikring-variables.js"></script>
-			<script type="text/javascript" src="https://nickolox.neocities.org/pikring/pikring-widget.js"></script>
-		</div>
-
-		<!-- wiiring -->
-		<div style="width:150px;margin:auto;">
-			<script src="https://jeith.neocities.org/assets/webring/wii-ring.js"></script>
-			<wii-ring site="https://doqmeat.neocities.org"></wii-ring>
-		</div>
-
-		<!--  vocaloid webring -->
-		<div id="vocaring">
-			<script type="text/javascript" src="https://adilene.net/webring/webring-variables.js"></script>
-			<script type="text/javascript" src="https://adilene.net/webring/webring-widget.js"></script>
-			<script src="https://kit.fontawesome.com/f936906ae0.js" crossorigin="anonymous"></script>
-		</div>
-
-	</div>
-
 	<footer>
 		<p><b>credit:</b> background from PMMM rebellion
 			<img src="!g/pix/1leaf.png">
 			lace borders by <a href="https://sorahana.ciao.jp/">sorahana</a>
 			<img src="!g/pix/1leaf.png">
-			<a href="http://www.mf2fm.com/rv/dhtmlrainbow.php">blinking JS text effect</a>
+			<a href="http://www.mf2fm.com/rv/dhtmlrainbow.php">blinking JS text effect</a> <img src="!g/pix/1leaf.png"> <a href="/notebook/links/fonts.html">fonts</a> used: morningtea, spirit
 		</p>
 	</footer>
 
