--- a/website/notebook/links/index.html
+++ b/website/notebook/links/index.html
@@ -227,6 +227,7 @@
 		<li><a href="https://sadgrl.online/webmastery/downloads/tiledbgs" target="_blank">sadgrl.online tiled bgs</a></li>
 		<li><a href="https://patternico.com/" target="_blank">patternico</a> - lets you create tiled bgs!</li>
 		<li><a href="https://www.transparenttextures.com/" target="_blank">transparent textures</a></li>
+		<li><a href="https://cocorini.tumblr.com/patterns" target="_blank">cocorini.com/patterns</a> - a nice selection of pastel patterned bgs!</li>
 
 		<h3 id="archives">collections</h3>
 
