added power fanlisting

--- a/website/home.html
+++ b/website/home.html
@@ -156,6 +156,8 @@ feel free to look around for any help you need :) just don't be THAT person and 
 		<div id="listing" class="box">
 			<h2>fanlistings &amp; cliques</h2>
 
+			<a href="https://www.marheavenj.net/power" target="_blank"><img src="!g/web/fanlisting-cliques/power.jpg" alt="power fanlisting"></a>
+
 			<a href="https://loonathefanlisting.neocities.org/" target="_blank"><img src="/!g/web/fanlisting-cliques/loona50x50_14.png" alt="loona fanlisting"></a>
 
 			<a href="https://loonathefanlisting.neocities.org/" target="_blank"><img src="/!g/web/fanlisting-cliques/loona50x50_0.png" alt="loona fanlisting"></a>
@@ -192,7 +194,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<a href="https://www.lejlart.com/apple.html" target="_blank"><img src="/!g/web/fanlisting-cliques/lejlart-clouds.gif" alt="appledust clouds mini-clique"></a>
 
 			<br>
-			<img src="/!g/web/fanlisting-cliques/cat-moudoku.png" width="20px" alt="pixel art of a grey cat"> i am a <a href="https://cliques.moudoku.com/cats" target="_blank">black cat</a>
+			<img src="/!g/web/fanlisting-cliques/cat-moudoku.png" width="20px" alt="pixel art of a grey cat"> <span style="font-size:15px">i am a <a href="https://cliques.moudoku.com/cats" target="_blank">black cat</a></span>
 
 		</div>
 
