button wall update

--- a/website/sites/index.html
+++ b/website/sites/index.html
@@ -131,7 +131,6 @@
 			<a title="bon - cool site about (some) stuff i dont really get but i do love their art style!" href="https://bondiaries.neocities.org" target="_blank"><img src="!g/bondiaries.png"></a>
 			<a title="dhampyr" href="https://dhampyr.neocities.org" target="_blank"><img src="!g/dhampyr.gif"></a>
 			<a title="des - literally my doppelganger + very nice art!" href="https://des.neocities.org" target="_blank"><img src="!g/des.gif"></a>
-			<a title="2044 / goner - super neat pixel site" href="https://2044.neocities.org" target="_blank"><img src="!g/2044.gif"></a>
 			<a title="santiago" href="https://dhampirave.neocities.org" target="_blank"><img src="!g/dhampirave.png"></a>
 			<a title="sarah - lovely site to be in! so full of personality!" href="https://inkcaps.neocities.org" target="_blank"><img src="!g/inkcaps.gif"></a>
 			<a title="josie - very cool site with an interesting music page + more!" href="https://cynosurestation.neocities.org/" target="_blank"><img src="!g/cynosurestation.gif"></a>
@@ -187,6 +186,7 @@
 			<a title="poemdoll" href="https://poemdoll.neocities.org"><img src="!g/poemdoll.png" alt="poemdoll"></a>
 			<a href="https://snewberry.neocities.org"><img style="image-rendering: pixelated" src="https://snewberry.neocities.org/snewbutton.gif" alt="Snewberry Button"></a>
 			<a title="lexi" href="https://lexiqqq.com/" target="_blank"><img src="https://www.lexiqqq.com/assets/img/button_4.gif" alt="lexi"></a>
+			<a title="sweetlolita" href="https://sweetlolita.neocities.org" target="_blank"><img src="!g/sweetlolita.gif" alt="sweetlolita"></a>
 
 		</div>
 
@@ -268,6 +268,8 @@
 			<a href="https://hat.neocities.org" target="_blank"><img src="!g/hat.gif" alt="hat"></a>
 			<a href="https://zucchini.cc" target="_blank"><img src="!g/zucchini.gif" alt="zucchini.cc"></a>
 			<a href="https://nerucom.neocities.org" target="_blank"><img src="!g/nerucom.gif" alt="nerucom"></a>
+			<a title="virtuagirl" href="https://www.virtuagirl.net/" target="_blank"><img src="!g/virtuagirl.gif" alt="virtuagirl"></a>
+			<a href="https://maria.town" target="_blank"><img src="!g/maria.town.png" alt="maria.town"></a>14
 		</div>
 
 		<a href="https://mewmiu.blog.fc2.com" target="_blank"><img src="https://blog-imgs-169.fc2.com/m/e/w/mewmiu/stamp.png"></a>
@@ -285,6 +287,7 @@
 			<a title="kobayashi yumiko's postcard shop" href="https://wadouraku.co.jp/SHOP/837454/list.html" target="_blank"><img src="!g/wadouraku.co.jp-yumiko-kobayashi.jpg"></a>
 			<a href="http://berry.heartette.net/" target="_blank"><img src="!g/berry.heartette.gif"></a>
 			<a title="lily - cute site of an artists i follow!" href="https://mothcub.neocities.org" target="_blank"><img src="!g/mothcub.gif"></a>
+			<a href="https://14-4ml.neocities.org/" target="_blank"><img src="!g/14-4ml.gif" alt="14-4ml"></a>
 		</div>
 
 		<div class="banner">
