--- a/website/notebook/sitely/info.html
+++ b/website/notebook/sitely/info.html
@@ -27,17 +27,17 @@
 
 		<h2>site</h2>
 		<p>site has been live since 11.apr.23! under <mark>doqmeat.com</mark> since 24.mar.24</p>
-		<p><b>coding editor</b>: i've used a few while making this site but <a href="https://brackets.io">brackets.io</a> is by far my favorite! <mark>some extentions i recommend:</mark></p>
+		<p><b>coding editor</b>: i've used a few while making this site but <a href="https://brackets.io" target="_blank">brackets.io</a> is by far my favorite! <mark>some extentions i recommend:</mark></p>
 		<ul>
 			<li>"Beautify" - makes code pretty and not so messy, organizes it</li>
 			<li>"Alice - Spell Checking" and alongside this "Alice Dictionaries"</li>
 			<li>"Brackets Git"</li>
 			<li>for UI improvements: <small>soon TM</small></li>
 		</ul>
-		<p><b>hosting</b>: <a href="https://neocities.org">neocities</a></p>
+		<p><b>hosting</b>: <a href="https://neocities.org" target="_blank">neocities</a></p>
 		<p><b>image editing</b>:</p>
 		<ul>
-			<li><a href="https://doodad.dev/dither-me-this/">dither me this</a> - for images that look like this! <img title="from villain MV" src="/music/!g/ads/villain2.png" alt="example" width="100%"></li>
+			<li><a href="https://doodad.dev/dither-me-this/" target="_blank">dither me this</a> - for images that look like this! <img title="from villain MV" src="/music/!g/ads/villain2.png" alt="example" width="100%"></li>
 			<li>clip studio paint - anything i've made art wise has been with this program <img src="/about/!g/folder.png"> <img src="/about/!g/hide.jpg"><img src="/about/!g/max.jpg"><img src="/about/!g/close.jpg"> <small>though i should really look for a better pixel art program lol...</small></li>
 		</ul>
 
