--- a/website/collection/internet-graphics/index.html
+++ b/website/collection/internet-graphics/index.html
@@ -180,6 +180,7 @@
 			<img src="!g/bittenbyblinkiebug.gif">
 			<img src="!g/ipod.gif">
 			<img src="!g/cringe.gif">
+			<img src="!g/eatshit.gif">
 			<img src="!g/birdapp.gif">
 			<a href="https://shishka.neocities.org/nofollow/site-dont-blink" target="_blank"><img src="!g/blockads.gif"></a>
 			<img src="!g/mikuplsinteract.gif">
