minor fix to button wall

--- a/website/sites/index.html
+++ b/website/sites/index.html
@@ -269,7 +269,7 @@
 			<a href="https://zucchini.cc" target="_blank"><img src="!g/zucchini.gif" alt="zucchini.cc"></a>
 			<a href="https://nerucom.neocities.org" target="_blank"><img src="!g/nerucom.gif" alt="nerucom"></a>
 			<a title="virtuagirl" href="https://www.virtuagirl.net/" target="_blank"><img src="!g/virtuagirl.gif" alt="virtuagirl"></a>
-			<a href="https://maria.town" target="_blank"><img src="!g/maria.town.png" alt="maria.town"></a>14
+			<a href="https://maria.town" target="_blank"><img src="!g/maria.town.png" alt="maria.town"></a>
 		</div>
 
 		<a href="https://mewmiu.blog.fc2.com" target="_blank"><img src="https://blog-imgs-169.fc2.com/m/e/w/mewmiu/stamp.png"></a>
