kpop youtube playlist added

--- a/website/music/playlists.html
+++ b/website/music/playlists.html
@@ -34,8 +34,7 @@
 <body>
 	<div id="frame">
 		<h2>playlists</h2>
-		<center><small>it's in my to-do list to make youtube playlist for each of these playlists bc man. does spotify suck.</small></center>
-		<p>i have a love hate relationship with spotify but i LOVE making playlists...</p>
+		<center><small>it's in my to-do list to make youtube playlist for each of these playlists bc man. does spotify sucks.</small></center>
 		<h3 class="title">personal</h3>
 		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0h2yJhCJMyDMl8weg5X5bm?utm_source=generator" width="40%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy" align="left"></iframe>
 
@@ -48,11 +47,14 @@
 		<p>my sleeping playlist.... i love listening to music while i sleep. mostly soundtracks or ambient songs</p>
 
 		<h3 class="title">genres / subgenres favs</h3>
+		<p>there's a bunch of different genres that i like so i thought it would be nice to put them all in playlist showcasing my favorite ones :3</p>
 		<h4>kpop</h4>
-		<p>every single kpop song i like. this is another playlist that has had a very interesting evolution throughout the years. i feel like i rarely add anything to it nowadays</p>
-		<p><i>highlights:</i> rollercoaster - txt <img src="/!g/pix/starpink.gif"> secret tape - sunmi <img src="/!g/pix/starpink.gif"> neon - yukika <img src="/!g/pix/starpink.gif"> drunk dazed - enhypen <img src="/!g/pix/starpink.gif"> stone heart - taemin</p>
-
-		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0sJwG0RCKuYtYVHb4dnkQP?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+		<p>basically a little bit of everything as kpop is basically a mix and match of many many genres but at least for my taste, i really enjoy the electronic, dance, and house inspired songs.</p>
+		<p><i>highlights:</i> rollercoaster - txt <img src="/!g/pix/starpink.gif"> secret tape - sunmi <img src="/!g/pix/starpink.gif"> neon - yukika <img src="/!g/pix/starpink.gif"> drunk dazed - enhypen <img src="/!g/pix/starpink.gif"> stone heart - taemin 2 <img src="/!g/pix/starpink.gif"> fast - superm</p>
+		<details>
+			<summary>youtube playlist</summary>
+			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?si=-U2FK--T9R_DnSNA&amp;list=PLJJj3iCewWn3JZCpr4DNcjo6AOY4RfQaR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+		</details>
 		<h4>drum n bass / breakbeat</h4>
 
 		<p>i NEED to get more into DNB i really love this genre a lot so if anyone has some recs pls let me know!</p>
