added a little cat to index

--- a/website/notebook/links/credit.html
+++ b/website/notebook/links/credit.html
@@ -39,9 +39,9 @@
 
 		<p>a lot of stuff i use for my site can be found on my <a href="/notebook/links/index.html">links</a> page! for the fonts i've used you can look at all of them <a href="/notebook/links/fonts.html">here</a> :)</p>
 
-		<p>i usually have a little space in my pages (usually in the <mark>footer</mark>) dedicated to the credit of materials used in the respective page!on older pages, you'll find some credit links in the <mark>source code</mark> :)</p>
+		<p>i usually have a little space in my pages (usually in the <mark>footer</mark>) dedicated to the credit of materials used in the respective page! on older pages, you'll find some credit links in the <mark>source code</mark> :)</p>
 
-		<p>a lot of the graphics in my site are from collection pages that rarely have their stuff sourced. i have tried my best to look for credit on some of these but if <u>i've used something that is not free to use please contact me and i will happily remove it</u>! if you know the credit for something or can't find what you're looking for, you're always welcome to ask in my chatbox or e-mail. happy coding!</p>
+		<p>a lot of the graphics in my site are from collection pages that rarely have their stuff sourced. i have tried my best to look for credit on some of these but if <u>i've used something that is not free to use please contact me and i will happily remove it</u>! if you know the credit for something you don't see credited or can't find what you're looking for, you're always welcome to send a msg in my chatbox or e-mail. happy coding!</p>
 
 		<h2 id="home">homepage v3 credits</h2>
 		<li>most pixels were found from pixel collection pages. i'd love to find the sources for each of them so i can give proper credit so if any one knows, please e-mail me!</li>
@@ -54,7 +54,7 @@
 		<p>these will depend on the theme selected!</p>
 
 		<h3>flower.css</h3>
-		<li>a lot of graphics are from these sites: <img src="/!g/deco/yellowbutteer.gif" alt=""> <img src="/!g/pix/sorahana-beebig2.gif"> <a href="https://sorahana.ciao.jp/" target="_blank">sorahana</a>, <img src="/!g/pix/1leaf.png"> <a href="https://sleepysprout.neocities.org/" target="_blank">sleepysprout</a></li>
+		<li>a lot of graphics are from these sites: <img src="/!g/deco/yellowbutteer.gif" alt=""> <img src="/!g/pix/sorahana-beebig2.gif"> <a href="https://sorahana.ciao.jp/" target="_blank">sorahana</a>, <img src="/!g/pix/1leaf.png"> <a href="https://sleepysprout.neocities.org/" target="_blank">sleepysprout</a>, this little cat here <img src="/!g/deco/tora-cat-peek.gif"> is from <a href="http://tora7.ciao.jp/" target="_blank">tora7kg</a></li>
 		<li>patterned bgs from <a href="http://sozaioukoku.fc2web.com/index.html" target="_blank">sozaioukoku</a></li>
 		<li><a href="/notebook/links/fonts.html">fonts</a> used in this page are: typo garden, gaegu, spirit, morningtea, nintendo ds bios, simple</li>
 		<li>body background by <a href="https://unsplash.com/photos/grass-field-at-daytime-PEm_sLmJT-w" target="_blank">Rodion Kutsaiev</a> from unsplash</li>
