added mimi's button!

--- a/website/sites/index.html
+++ b/website/sites/index.html
@@ -38,7 +38,7 @@
 			<a title="nico - love the index page layout and his art style is very neat. love the cat creatures" href="https://spiders.neocities.org" target="_blank"><img src="!g/spiders.gif"></a>
 			<a title="artyom - windows xp layout goes hard" href="https://arutemu64.neocities.org" target="_blank"><img src="!g/arutemu64.gif"></a>
 			<a title="freyde - an AMAZING collection of pages dedicated to various things." href="https://amriel.neocities.org" target="_blank"><img src="!g/amriel.png"></a>
-			<a title="mimi - super nice person and my penpal!" href="https://awhe.neocities.org" target="_blank"><img src="!g/awhe.gif"></a>
+			<a title="mimi - super nice person and my penpal!" href="https://neet-elite.net/" target="_blank"><img src="!g/neet-elite.png" alt="neet-elite"></a>
 			<a title="meek - HATSUNE MIKU!" href="https://mikufan3939.neocities.org" target="_blank"><img src="!g/mikufan3939.png"></a>
 			<a title="bridget - super neat little site!! i love the layout of this one and the webmaster's art is super nice!!!" href="https://bridget.neocities.org" target="_blank"><img src="!g/bridget.gif"></a>
 			<a title="jeith - a very nostalgic site, lots of nintendo stuff! very cozy" href="https://jeith.neocities.org" target="_blank"><img src="!g/jeith.gif"></a>
@@ -50,7 +50,6 @@
 			<a title="river - cute website! can't wait to watch it grow" href="https://optimism.neocities.org" target="_blank"><img src="!g/optimism.png"></a>
 			<a title="jay - love the aesthetic of this site! the artbooks page is my favorite" href="https://catsoupery.neocities.org" target="_blank"><img src="!g/catsoupery.gif"></a>
 			<a title="hoonis - the most colorful website ever!! whimsical even" href="https://confettiguts.neocities.org" target="_blank"><img src="!g/confettiguts.gif"></a>
-			<a title="ava - very fun layout!" href="https://daintyeco.neocities.org" target="_blank"><img src="!g/daintyeco.gif"></a>
 			<a title="spencer - lots of cool collections + i love looking at pics of harvey aka his cat + THEJERM" href="https://foggybear42.neocities.org" target="_blank"><img src="!g/foggybear.gif"></a>
 			<a title="pirra - LOVE the sticker sheet collection!!! and it inspired mine as well" href="https://pirra.neocities.org" target="_blank"><img src="!g/pirra.gif"></a>
 			<a title="r0b1n666 - cool art!" href="https://r0b1n666.neocities.org" target="_blank"><img src="!g/r0b1n666.gif"></a>
@@ -192,7 +191,6 @@
 
 		<h4>sites without buttons (<a href="mailto:doqmeat@gmail.com" target="_blank">e-mail me</a> if you do have one!)</h4>
 		<p><a href="https://44caliber.net/" target="_blank">44caliber.net</a> /
-			<a href="https://neet-elite.net/" target="_blank">neet-elite.net</a> /
 			<a href="https://dogsprite.neocities.org/" target="_blank">dogsprite</a> /
 			<a href="https://pelagiczones.neocities.org/" target="_blank">pelagiczones</a> /
 			<a href="https://bubbly.neocities.org/" target="_blank">bubbly</a> /
@@ -288,6 +286,7 @@
 			<a href="http://berry.heartette.net/" target="_blank"><img src="!g/berry.heartette.gif"></a>
 			<a title="lily - cute site of an artists i follow!" href="https://mothcub.neocities.org" target="_blank"><img src="!g/mothcub.gif"></a>
 			<a href="https://14-4ml.neocities.org/" target="_blank"><img src="!g/14-4ml.gif" alt="14-4ml"></a>
+			<a href="https://avas.space/" target="_blank"><img src="https://ava.nekoweb.org/buttons/buttongif.gif"></a>
 		</div>
 
 		<div class="banner">
@@ -379,6 +378,7 @@
 			<a title="mari - cute and silly" href="https://cardcaptors.neocities.org" target="_blank"><img src="!g/cardcaptors.gif" alt="cardcaptors!"></a>
 			<a title="surge - found on 32bit cafe discord server! very cool and i love the photography page" href="http://doubleincision.com/" target="_blank"><img src="!g/doubleincision.png"></a>
 			<a title="kojou - i love all the art around this site!" href="https://kojou.neocities.org" target="_blank"><img src="!g/kojou.jpg"></a>
+			<a title="ava - very fun layout!" href="https://daintyeco.neocities.org" target="_blank"><img src="!g/daintyeco.gif"></a>
 		</div>
 
 		<!--box1 end wrapper end div-->
